test/files/neg/unchecked-refinement.check
unchecked-refinement.scala:18: warning: abstract type U in type pattern Foo[U,U,V] is unchecked since it is eliminated by erasure
    /*   warn */ case _: Foo[U, U, V] if b       => ()
                         ^
unchecked-refinement.scala:20: warning: non-variable type argument Any in type pattern Foo[Any,U,V] is unchecked since it is eliminated by erasure
    /*   warn */ case _: Foo[Any, U, V] if b     => ()
                         ^
unchecked-refinement.scala:24: warning: a pattern match on a refinement type is unchecked
    /* nowarn - todo */ case x: AnyRef { def bippy: Int } if b => x.bippy  // this could/should do an instance check and not warn
                                ^
unchecked-refinement.scala:25: warning: a pattern match on a refinement type is unchecked
    /* nowarn - todo */ case x: AnyRef { def size: Int } if b  => x.size   // this could/should do a static conformance test and not warn
                                ^
warning: one feature warning; re-run with -feature for details
error: No warnings can be incurred under -Xfatal-warnings.
5 warnings found
one error found
